chore(docs): swg fmt and model typo fix
