# docs/swagger.json
@@ -50,7 +50,7 @@
                     "200": {
                         "description": "status: success when all goes well",
                         "schema": {
-                            "$ref": "#/definitions/models.Status"
+                            "$ref": "#/definitions/models.GearCategory"
                         }
                     },
                     "default": {
@@ -309,7 +309,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.GearNoID"
+                            "$ref": "#/definitions/models.Gear"
                         }
                     }
                 ],
@@ -597,7 +597,7 @@
                     "200": {
                         "description": "status: success when all goes well",
                         "schema": {
-                            "$ref": "#/definitions/models.Status"
+                            "$ref": "#/definitions/models.Manufacture"
                         }
                     },
                     "default": {
@@ -1804,41 +1804,6 @@
                 },
                 "top_category_name": {
                     "type": "string"
-                }
-            }
-        },
-        "models.GearNoID": {
-            "type": "object",
-            "properties": {
-                "gear_category_id": {
-                    "type": "integer"
-                },
-                "gear_height": {
-                    "type": "integer"
-                },
-                "gear_length": {
-                    "type": "integer"
-                },
-                "gear_manufacture_id": {
-                    "type": "integer"
-                },
-                "gear_name": {
-                    "type": "string"
-                },
-                "gear_size_definition": {
-                    "type": "string"
-                },
-                "gear_status": {
-                    "type": "boolean"
-                },
-                "gear_top_category_id": {
-                    "type": "integer"
-                },
-                "gear_weight": {
-                    "type": "integer"
-                },
-                "gear_width": {
-                    "type": "integer"
                 }
             }
         },
